Ejercicios/Tema4/Tema4.2/Ejercicio1/mi-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mi-clusterip
spec:
    type: ClusterIP
    selector:
      modulo: servidor-web
    ports:
    - port: 80
      targetPort: 80
