Ejercicios/Tema4/Tema4.2/Ejercicio1/mi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
spec:
    rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
              service:
                  modulo: servidor-web
                  port:
                      number: 80
